# claude-insights

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  app.py  db.py  debug-ctx-pct.mjs  docker-compose.yml  install.sh  monitor-hook.sh  pyproject.toml  run.sh  sonar-project.properties
.claude/: settings.example.json  settings.json
.claude/logs/: 2026-03-28.md  2026-03-29.md  2026-03-30.md  2026-04-02.md  2026-04-03.md
.claude/plans/: open-source-release.md
.claude/rules/: common  private
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-site.yml  release.yml
.playwright-mcp/: page-2026-04-24T14-51-47-009Z.yml  page-2026-04-24T14-55-30-316Z.yml  page-2026-04-24T14-58-30-754Z.yml  page-2026-04-24T15-00-46-174Z.yml
claude_insights/: __init__.py  cli.py
claude_monitor/: config.py  db.py  main.py  state.py
claude_monitor/account/: router.py
claude_monitor/app_config/: router.py  service.py
claude_monitor/context/: router.py
claude_monitor/core/: background.py  broadcast.py  pages.py  sse.py
claude_monitor/files/: router.py
claude_monitor/git_ops/: router.py
claude_monitor/jsonl/: parser.py
claude_monitor/projects/: router.py  service.py
claude_monitor/sessions/: router.py  service.py
claude_monitor/skills/: router.py  service.py
claude_monitor/stats/: router.py  service.py
claude_monitor/terminal/: ws.py
docs/deploy/: 2026-04-30-1952.md  2026-04-30-2110.md
docs/plans/: 2026-04-30-readme-rewrite.md
docs/screenshots/: INDEX.md
docs/specs/: 2026-04-30-readme-design.md
docs/superpowers/plans/: 2026-04-24-claude-insights.md
docs/superpowers/specs/: 2026-04-24-claude-insights-design.md
scripts/: run-install-test.sh  test-install-multipass.sh
site/: index.html
static/: _old-monitor.html  index.html  insights.html  manifest.json  sw.js
tests/: conftest.py
tests/acceptance/: test_agent_persistence.py  test_context_inspector.py  test_git_integration.py  test_jsonl_watcher.py  test_project_discovery.py  test_session_stats.py  test_status_polling.py
tests/account/: test_router.py
tests/app_config/: test_router.py  test_service.py
tests/backend/: test_db.py  test_endpoints.py  test_endpoints_extended.py  test_helpers.py  test_jsonl.py  test_lifecycle.py  test_parsers.py
tests/context/: test_router.py
tests/core/: test_background_tasks.py
tests/db/: test_db.py
tests/e2e/: conftest.py  pytest.ini  test_context_inspector.py  test_git_panel.py  test_reasoning_panel.py  test_session_panel.py  test_status_bar.py  test_token_bar.py
tests/files/: test_router.py
tests/frontend/: test_frontend_bugs.py
tests/git_ops/: test_router.py
tests/hook/: test_monitor_hook.bats
tests/install/: test_install.bats
tests/jsonl/: test_parser.py
tests/projects/: test_router.py  test_service.py
tests/sessions/: test_router.py  test_service.py
tests/skills/: test_router.py  test_service.py
tests/stats/: test_router.py  test_service.py
tests/terminal/: test_ws.py
