[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-insights"
version = "1.0.0b1"
description = "Real-time dashboard for Claude Code sessions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Leandro Siciliano", email = "leandro@infowhere.ai" }
]
keywords = ["claude", "ai", "monitor", "dashboard", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
claude-insights = "claude_insights.cli:main"

[project.urls]
Homepage = "https://github.com/infowhere-be/claude-monitor"
Repository = "https://github.com/infowhere-be/claude-monitor"

[tool.hatch.build.targets.wheel]
packages = ["claude_insights"]

[tool.hatch.build.targets.sdist]
include = [
    "claude_insights/",
    "static/",
    "README.md",
    "requirements.txt",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"
