[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-insights"
version = "1.0.0b1"
description = "Real-time dashboard for Claude Code sessions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Leandro Siciliano", email = "infowhere@infowhere.ai" }
]
keywords = ["claude", "ai", "monitor", "dashboard", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
claude-insights = "claude_insights.cli:main"

[project.urls]
Homepage = "https://github.com/infowhere-ai/claude-insights"
Repository = "https://github.com/infowhere-ai/claude-insights"

[tool.hatch.build.targets.wheel]
packages = ["claude_monitor", "claude_insights"]

[tool.hatch.build.targets.wheel.force-include]
"monitor-hook.sh" = "claude_insights/monitor-hook.sh"
"install.sh"      = "claude_insights/install.sh"
"static"          = "claude_insights/static"

[tool.hatch.build.targets.sdist]
include = [
    "claude_monitor/",
    "claude_insights/",
    "static/",
    "monitor-hook.sh",
    "install.sh",
    "README.md",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
    "pytest-playwright>=0.5.0",
    "pytest-timeout>=2.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=claude_monitor --cov-report=xml:coverage.xml --cov-report=term-missing"
# E2E tests: run with -p no:cov (server runs in subprocess, coverage not applicable)

[tool.coverage.run]
source = ["claude_monitor"]
omit = [
    "tests/*",
    "dist/*",
    ".venv/*",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py310"
